# foosball-toolkit

./: .dockerignore  .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: foos-db-app.yml
echo-api/: Cargo.toml
echo-api/src/: main.rs
fast/: Cargo.toml
fast/src/: fast.rs  lib.rs  main.rs
fast/src/serde/: fast_date.rs  fast_date_time.rs  mod.rs  option_fast_date_time.rs
foos-db/: Cargo.toml  Dockerfile  Dockerfile-prebuilt  sqlx-data.json
foos-db-app/: Cargo.toml  index.html
foos-db-app/src/: foos_db_client.rs  header.rs  import_component.rs  main.rs  match_component.rs  matches.rs  nav.rs  player_name_component.rs  recent_matches.rs
foos-db-app/src/components/: app.rs  header.rs  home.rs  import_component.rs  match_component.rs  matches.rs  mod.rs  nav.rs  player_component.rs  player_name_component.rs  players.rs  recent_matches.rs  top_players.rs
foos-db-app/src/components/management/: management.rs  mod.rs  tournament_management.rs
foos-db-app/src/components/management/player_management/: mod.rs  player.rs
foos-db-app/src/components/player_management/: mod.rs  player.rs
foos-db-app/src/hooks/: mod.rs  use_foos_db_client.rs  use_input.rs  use_match_data.rs  use_match_datas.rs  use_matches.rs  use_player.rs  use_player_datas.rs  use_player_matches.rs  use_players.rs  use_rating.rs  use_tournament.rs
foos-db-app/src/models/: match.rs  match_data.rs  mod.rs  player.rs  player_data.rs  player_match.rs  rating.rs  tournament.rs
foos-db/src/: main.rs
foos-db/src/controllers/: import.rs  match.rs  match_data.rs  mod.rs  player.rs  player_data.rs  player_match.rs  rating.rs  tournament.rs
foos-db/src/controllers/import/: fast.rs  ktool.rs  mod.rs
foos-db/src/database/: mod.rs
foos-db/src/models/: fast_player.rs  game.rs  import.rs  match.rs  match_data.rs  mod.rs  player.rs  player_data.rs  player_match.rs  rating.rs  tournament.rs
foos-db/src/rating/: calculator.rs  mod.rs  service.rs
kickertool-data/: Cargo.toml
kickertool-data/src/: lib.rs
kickertool-driver/: Cargo.toml
kickertool-driver/src/: main.rs
kickertool-driver/src/kickertool/: mod.rs  scraper.rs
kickertool-driver/src/sinks/file/: mod.rs
kickertool-driver/src/sinks/http_post/: mod.rs
ktool/: Cargo.toml  README.md
ktool/src/: 05_15_2022.ktool  05_16_2022.ktool  ktool.rs  lib.rs  main.rs
overlay/: Cargo.toml  index.html
overlay/src/: index.html  main.rs
overlay/src/kickertool/: mod.rs  next.rs  standings.rs  status.rs
src/: kickertool.rs  main.rs
src/kickertool/: mod.rs  scraper.rs
src/sinks/: mod.rs
src/sources/browser/: headless_chrome.rs  mod.rs
