[package]
name = "kickertool-driver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git" }
dirs-sys = "0.3.7"
rxrust = "1.0.0-alpha.3"
futures = "0.3.21"
scraper = "0.13.0"
regex = "1.5.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = "1.0.137"
