[package]
name = "fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.9", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
regex = "1.5.5"
