cargo-features = ["per-package-target"]
[package]
name = "foos-db-app"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
reqwest = "0.11.10"
rxrust = { git = "https://github.com/rxRust/rxRust", features = ["wasm-scheduler"] }
