[package]
name = "foos-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
sqlx = { version = "0.5.13", features = ["runtime-actix-rustls", "macros", "postgres", "time"] }
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
actix-multipart = "0.4.0"
serde_json = "1.0.81"
futures = "0.3.21"
ktool = { path = "../ktool" }
time = { version = "0.2.27", features = ["serde"] }

