[package]
name = "foos-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-actix-rustls", "macros", "postgres", "time", "offline"] }
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
actix-multipart = "0.4.0"
serde_json = "1.0.81"
futures = "0.3.21"
ktool = { path = "../ktool" }
time = { version = "0.3.9", features = ["serde"] }
fast = { path = "../fast" }
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
time-tz = "1.0.1"
zip = "0.6.2"
actix-cors = "0.6.1"
env_logger = "0.9.0"
