[package]
name = "ktool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.9", features = ["serde-well-known"] }

[dev-dependencies]
serde_json = "1.0.81"
